# oneDPL

./: .clang-format  .gitignore  .travis.yml  CHANGES  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.txt  CppProperties.json  MAINTAINERS.md  ParallelSTLConfig.cmake.in  README  README.md  Release_Notes.txt  SECURITY.md  VERSION  api_for_dpcpp_kernels_main.html  api_for_sycl_kernels_main.html  before_you_begin.html  cmake_support.html  dynamic_selection_api_main.html  extension_api.html  genindex.html  index.html  introduction.html  kernel_templates_main.html  macros.html  notices_disclaimers.html  objects.inv  oneDPL_2022.0_changes.html  onedpl_gsg.html  overview.html  parallel_api_main.html  pstl_main.html  random.html  search.html  searchindex.js  show_cards.sh  tested_standard_cpp_api.html  (+1 more)
examples/: CMakeLists.txt
examples/convex_hull/: CMakeLists.txt  Makefile  Makefile.windows  README.md  convex_hull.cpp  license.txt  readme.html  utils.h
examples/dot_product/: CMakeLists.txt  Makefile  Makefile.windows  README.md  dot_product.cpp  license.txt  readme.html
examples/dpc_reduce/: README.md
examples/dpcpp_gamma_correction/: README.md
examples/gamma_correction/: CMakeLists.txt  Makefile  Makefile.windows  README.md  gamma_correction.cpp  readme.html  utils.cpp  utils.h
examples/histogram/: CMakeLists.txt  README.md
examples/random/: CMakeLists.txt  README.md
examples/stable_sort_by_key/: CMakeLists.txt  README.md
examples/tbb_gamma_correction/: gamma_correction.cpp  license.txt  readme.html  utils.cpp  utils.h
src/: CMakeLists.txt  pstl_offload.cpp  win64.def
src/cmake/: generate_vars.cmake
test/: CMakeLists.txt  lambda_naming.pass.cpp  pstl_test_config.h  sycl_iterator.pass.cpp  sycl_policy.pass.cpp  test_adjacent_difference.cpp  test_adjacent_find.cpp  test_alg_invoke.h  test_algorithm.cpp  test_all_of.cpp  test_any_of.cpp  test_copy_if.cpp  test_copy_move.cpp  test_count.cpp  test_equal.cpp  test_fill.cpp  test_find.cpp  test_find_end.cpp  test_find_first_of.cpp  test_find_if.cpp  test_for_each.cpp  test_generate.cpp  test_includes.cpp  test_inplace_merge.cpp  test_is_heap.cpp  test_is_partitioned.cpp  test_is_sorted.cpp  test_iterators.cpp  test_lexicographical_compare.cpp  test_memory.cpp  test_merge.cpp  test_minmax_element.cpp  test_mismatch.cpp  test_none_of.cpp  test_nth_element.cpp  test_numeric.cpp  test_partial_sort.cpp  test_partial_sort_copy.cpp  test_partition.cpp  test_partition_copy.cpp  (+26 more)
test/extensions_testsuite/: async_sycl.pass.cpp  async_usm.pass.cpp  binary_search_cpu.pass.cpp  binary_search_sycl.pass.cpp  discard_iterator_sycl.pass.cpp  dpl_namespace.pass.cpp  exclusive_scan_by_segment_sycl.pass.cpp  exclusive_scan_by_segment_usm.pass.cpp  inclusive_scan_by_segment_sycl.pass.cpp  inclusive_scan_by_segment_usm.pass.cpp  interface_check.pass.cpp  lower_bound_cpu.pass.cpp  lower_bound_sycl.pass.cpp  permutation_iterator_sycl.pass.cpp  reduce_async_sycl.pass.cpp  reduce_by_segment_cpu.pass.cpp  reduce_by_segment_sycl.pass.cpp  reduce_by_segment_usm.pass.cpp  scan_by_segment_cpu.pass.cpp  test_functional.cpp  test_functional.pass.cpp  upper_bound_cpu.pass.cpp  upper_bound_sycl.pass.cpp
test/general/: backend_inclusion.pass.cpp  buffer_wrapper.pass.cpp  direct_iterator.pass.cpp  dpl_namespace.pass.cpp  fork.pass.cpp  header_inclusion_order_algorithm_0.pass.cpp  header_inclusion_order_algorithm_1.pass.cpp  header_inclusion_order_async_0.pass.cpp  header_inclusion_order_async_1.pass.cpp  header_inclusion_order_memory_0.pass.cpp  header_inclusion_order_memory_1.pass.cpp  header_inclusion_order_numeric_0.pass.cpp  header_inclusion_order_numeric_1.pass.cpp  header_order_ranges_0.pass.cpp  header_order_ranges_1.pass.cpp  interface_check.pass.cpp  lambda_naming.pass.cpp  macros.pass.cpp  sycl_iterator.pass.cpp  sycl_iterator.pass.h  sycl_iterator_buf1.pass.cpp  sycl_iterator_buf2.pass.cpp  sycl_iterator_buf3.pass.cpp  sycl_policy.pass.cpp  test_policies.pass.cpp  test_stl_debug_iterators.pass.cpp  test_tag_dispatching.pass.cpp  type_requirements.pass.cpp  version.pass.cpp
test/kt/: CMakeLists.txt  esimd_radix_sort.cpp  esimd_radix_sort_by_key.cpp  esimd_radix_sort_by_key_copy.cpp  esimd_radix_sort_by_key_out_of_place.cpp  esimd_radix_sort_copy.cpp  esimd_radix_sort_copy_by_key.cpp  esimd_radix_sort_out_of_place.cpp  esimd_radix_sort_utils.h  gpu_radix_sort.cpp  kt_radix_sort_test_utils.h  single_pass_copy_if.cpp  single_pass_scan.cpp  two_pass_scan.cpp
test/parallel_api/: sycl_canary.pass.cpp
test/pstl/: header_inclusion_order_algorithm_0.pass.cpp  header_inclusion_order_algorithm_1.pass.cpp  header_inclusion_order_memory_0.pass.cpp  header_inclusion_order_memory_1.pass.cpp  header_inclusion_order_numeric_0.pass.cpp  header_inclusion_order_numeric_1.pass.cpp  iterators.pass.cpp  type_requirements.pass.cpp  version.pass.cpp
test/pstl_offload/: empty_test_pstl_offload.pass.cpp
test/pstl_testsuite/: lambda_naming.pass.cpp  sycl_policy.pass.cpp  transform_iterator.pass.cpp  zip_iterator.pass.cpp
test/ranges/: copy_ranges_factory_sycl.pass.cpp  copy_ranges_sycl.pass.cpp  find_end_ranges_sycl.pass.cpp  for_each_ranges_sycl.pass.cpp  reduce_ranges_sycl.pass.cpp  transform2_ranges_factory_sycl.pass.cpp  transform2_ranges_sycl.pass.cpp  transform_ranges_factory_sycl.pass.cpp  transform_ranges_sycl.pass.cpp  zip_view.pass.cpp
test/support/: .nfs0000000064a5933000000004  MoveOnly.h  barriers.h  binary_search_utils.h  concurrent_queue.h  counting_predicates.h  counting_predicates.hpp  histogram_serial_impl.h  inline_backend.h  inline_scheduler.h  iterator_utils.h  math_utils.h  move_only.h  oneapi_std_test_config.h  pstl_test_config.h  reduce_serial_impl.h  scan_serial_impl.h  specfun_testcase.h  sycl_alloc_utils.h  sycl_sanity.h  test_bessel.h  test_complex.h  test_config.h  test_ds_utils.h  test_dynamic_load_utils.h  test_dynamic_selection_no_offset_utils.h  test_dynamic_selection_offset_utils.h  test_dynamic_selection_one_policy.h  test_dynamic_selection_utils.h  test_macros.h  (+18 more)
testsuite/: CMakeLists.txt
(+3265 files in other folders)
